--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </p>
             <form>
               <input type="email" placeholder="Enter Email...." />
-              <input type="submit" value="Subscribe" class="btn btn-primary" />
+              <input type="submit" value="Subscribe" class="btn btn-block" />
             </form>
           </div>
   
