--- a/about.html
+++ b/about.html
@@ -110,41 +110,62 @@
             <a href="index.html" class="text-primary">MD<sapn>Lawancy</sapn></a>
           </h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-            molestiae eos, reiciendis in odit ipsum qui dignissimos asperiores
-            eveniet. Nisi.
+            MD Lawancy is where printers can conveniently find their favorite
+            high-quality brands of equipment and supplies, such as Riley
+            Hopkins, FN-INK, Baselayr, & Sgreen. Screen Printers can also earn
+            points from each and every purchase through ScreenPrinting.com to be
+            used for future orders of equipment and supplies. Enough about us...
+            this is about you, you ready to get printing?
           </p>
         </div>
 
         <div>
-          <h3>Email Newsletter</h3>
+          <h3 class="text-primary">Email Newsletter</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Voluptates, blanditiis.
+            Get a discount + printing tips, promotions, New brand, New Products,
+            free training, news and exclusive invites.
           </p>
           <form>
             <input type="email" placeholder="Enter Email...." />
-            <input type="submit" value="Subscribe" class="btn btn-primary" />
+            <input type="submit" value="Subscribe" class="btn btn-block" />
           </form>
         </div>
 
         <div>
-          <h3>Site Links</h3>
+          <h3 class="text-fade">Site Links</h3>
           <ul class="list">
+            <li><a href="#" class="text-light">Services</a></li>
+            <li><a href="#" class="text-light">Blog</a></li>
+            <li><a href="#" class="text-light">About Us</a></li>
+            <li><a href="#" class="text-light">Contact</a></li>
+            <li><a href="#" class="text-light">Shop</a></li>
+
             <li><a href="#" class="text-light">Help & Support</a></li>
             <li><a href="#" class="text-light">privacy Policy</a></li>
-            <li><a href="#" class="text-light">About Us</a></li>
+            <li><a href="#" class="text-light">Technical Support</a></li>
+            <li><a href="#" class="text-light">Training</a></li>
             <li><a href="#" class="text-light">Contact</a></li>
           </ul>
         </div>
 
         <div>
-          <h2>Join our club</h2>
+          <h2 class="text-fade">Join our club</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita
             odit placeat deserunt voluptas possimus eaque!
           </p>
           <a href="" class="btn btn-primary">Join Now</a>
+          <br /><br />
+          <p>+234 814 0394 714</p>
+          <p>Opposite Don Mabel Ties Off Jattu Road Auchi</p>
+          <br />
+          <div class="social">
+            <p class="text-fade">Follow us</p>
+            <a href="#"><i class="fa-brands fa-square-facebook fa-2x"></i> </a>
+            <a href="#"><i class="fa-brands fa-instagram fa-2x"></i> </a>
+            <a href="#"><i class="fa-brands fa-twitter fa-2x"></i> </a>
+            <a href="#"><i class="fa-brands fa-youtube fa-2x"></i> </a>
+          </div>
         </div>
         <div>
           <p>copyright &copy;2023 All Right Reserved</p>
