--- a/services.html
+++ b/services.html
@@ -58,11 +58,11 @@
 
         <div class="articles-container">
           <article class="card">
-            <img src="images/articles/ent1.jpg" alt="ent" />
+            <img src="images/articles/screenprinting.jpg" alt="ent" />
             <div>
-              <div class="text-btn bg-li-secondary">Screen Printing</div>
+              <div class="text-btn bg-li-secondary">PRINT</div>
               <h3>
-                <a href="services.html">Lorem ipsum dolor sit amet.</a>
+                <a href="services.html">Screen Printing</a>
               </h3>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -73,9 +73,9 @@
           </article>
 
           <article class="card bg-secondary">
-            <div class="text-btn bg-primary">Training</div>
+            <div class="text-btn bg-primary">OTHER</div>
             <h3>
-              <a href="services.html">Lorem ipsum dolor sit amet.</a>
+              <a href="services.html">Training </a>
             </h3>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -88,7 +88,7 @@
             <img src="images/articles/tech1.jpg" alt="tech" />
             <div class="text-btn bg-secondary">Graphics Design</div>
             <h3>
-              <a href="services.html">Lorem ipsum dolor sit amet.</a>
+              <a href="services.html">Posters</a>
             </h3>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -98,9 +98,9 @@
           </article>
 
           <article class="card">
-            <div class="text-btn bg-dark">web design</div>
+            <div class="text-btn bg-dark">TECHNOLOGY</div>
             <h3>
-              <a href="services.html">Lorem ipsum dolor sit amet.</a>
+              <a href="services.html">Web Design</a>
             </h3>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -112,9 +112,9 @@
 
           <article class="card">
             <img src="images/articles/tech2.jpg" alt="tech2" />
-            <div class="text-btn bg-primary">gift items</div>
+            <div class="text-btn bg-primary">FASHION</div>
             <h3>
-              <a href="services.html">Lorem ipsum dolor sit amet.</a>
+              <a href="services.html">Traditional Wears</a>
             </h3>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -124,9 +124,9 @@
           </article>
 
           <article class="card bg-dark">
-            <div class="text-btn bg-primary">branding</div>
+            <div class="text-btn bg-primary">BRANDING</div>
             <h3>
-              <a href="services.html">Lorem ipsum dolor sit amet.</a>
+              <a href="services.html">T-Shirt Printing</a>
             </h3>
             <p>
               Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -137,9 +137,9 @@
 
           <article class="card">
             <div>
-              <div class="text-btn bg-li-secondary">sewing</div>
+              <div class="text-btn bg-li-secondary">PRINT</div>
               <h3>
-                <a href="services.html">Lorem ipsum dolor sit amet.</a>
+                <a href="services.html">Complimetary Card</a>
               </h3>
               <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit.
@@ -161,41 +161,62 @@
             <a href="index.html" class="text-primary">MD<sapn>Lawancy</sapn></a>
           </h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit
-            molestiae eos, reiciendis in odit ipsum qui dignissimos asperiores
-            eveniet. Nisi.
+            MD Lawancy is where printers can conveniently find their favorite
+            high-quality brands of equipment and supplies, such as Riley
+            Hopkins, FN-INK, Baselayr, & Sgreen. Screen Printers can also earn
+            points from each and every purchase through ScreenPrinting.com to be
+            used for future orders of equipment and supplies. Enough about us...
+            this is about you, you ready to get printing?
           </p>
         </div>
 
         <div>
-          <h3>Email Newsletter</h3>
+          <h3 class="text-primary">Email Newsletter</h3>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Voluptates, blanditiis.
+            Get a discount + printing tips, promotions, New brand, New Products,
+            free training, news and exclusive invites.
           </p>
           <form>
             <input type="email" placeholder="Enter Email...." />
-            <input type="submit" value="Subscribe" class="btn btn-primary" />
+            <input type="submit" value="Subscribe" class="btn btn-block" />
           </form>
         </div>
 
         <div>
-          <h3>Site Links</h3>
+          <h3 class="text-fade">Site Links</h3>
           <ul class="list">
+            <li><a href="#" class="text-light">Services</a></li>
+            <li><a href="#" class="text-light">Blog</a></li>
+            <li><a href="#" class="text-light">About Us</a></li>
+            <li><a href="#" class="text-light">Contact</a></li>
+            <li><a href="#" class="text-light">Shop</a></li>
+
             <li><a href="#" class="text-light">Help & Support</a></li>
             <li><a href="#" class="text-light">privacy Policy</a></li>
-            <li><a href="#" class="text-light">About Us</a></li>
+            <li><a href="#" class="text-light">Technical Support</a></li>
+            <li><a href="#" class="text-light">Training</a></li>
             <li><a href="#" class="text-light">Contact</a></li>
           </ul>
         </div>
 
         <div>
-          <h2>Join our club</h2>
+          <h2 class="text-fade">Join our club</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita
             odit placeat deserunt voluptas possimus eaque!
           </p>
           <a href="" class="btn btn-primary">Join Now</a>
+          <br /><br />
+          <p>+234 814 0394 714</p>
+          <p>Opposite Don Mabel Ties Off Jattu Road Auchi</p>
+          <br />
+          <div class="social">
+            <p class="text-fade">Follow us</p>
+            <a href="#"><i class="fa-brands fa-square-facebook fa-2x"></i> </a>
+            <a href="#"><i class="fa-brands fa-instagram fa-2x"></i> </a>
+            <a href="#"><i class="fa-brands fa-twitter fa-2x"></i> </a>
+            <a href="#"><i class="fa-brands fa-youtube fa-2x"></i> </a>
+          </div>
         </div>
         <div>
           <p>copyright &copy;2023 All Right Reserved</p>
