--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a class="current" href="index.html">Home</a></li>
                     <li><a href="services.html">Service</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Countact</a></li>
+                    <li><a href="shop.html">Shop</a></li>
                 </ul>
             </div>
         </nav>
