--- a/services.html
+++ b/services.html
@@ -78,9 +78,10 @@
               <a href="services.html">Training </a>
             </h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Doloribus ab eum consequatur quisquam non vitae voluptate nemo
-              esse aut. Saepe!
+              It gives us, joy to impact knowledge to as many that desires it.
+              Thus we offer training in the following area, Graphics Design, Web
+              design & Development, Screen Printing, Heat Tranfers and Vinyl
+              Cutting, Wordpress.
             </p>
           </article>
 
@@ -117,9 +118,9 @@
               <a href="services.html">Traditional Wears</a>
             </h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Doloribus ab eum consequatur quisquam non vitae voluptate nemo
-              esse aut. Saepe!
+              We make Traditional wears from the best Altire with fine stiches
+              and a unique design that will draw attraction to others wherever
+              you enter.
             </p>
           </article>
 
@@ -129,9 +130,8 @@
               <a href="services.html">T-Shirt Printing</a>
             </h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Doloribus ab eum consequatur quisquam non vitae voluptate nemo
-              esse aut. Saepe!
+              we are dedicated to branding of t-shirts for companies, campaign,,
+              birthdays, burial ceremonies etc.
             </p>
           </article>
 
@@ -148,6 +148,34 @@
               </p>
             </div>
             <img src="images/articles/ent2.jpg" alt="ent" />
+          </article>
+
+          <article class="card">
+            <img src="images/articles/ent1.jpg" alt="ent" />
+            <div>
+              <div class="text-btn bg-primary">Branding</div>
+              <h3>
+                <a href="services.html">Mug Printing </a>
+              </h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Doloribus ab eum consequatur quisquam non vitae voluptate nemo
+                esse aut. Saepe!
+              </p>
+            </div>
+          </article>
+
+          <article class="card bg-li-primary">
+            <div class="text-btn bg-secondary">Print</div>
+            <h3>
+              <a href="services.html">Identity card </a>
+            </h3>
+            <p>
+              It gives us, joy to impact knowledge to as many that desires it.
+              Thus we offer training in the following area, Graphics Design, Web
+              design & Development, Screen Printing, Heat Tranfers and Vinyl
+              Cutting, Wordpress.
+            </p>
           </article>
         </div>
       </div>
