--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="carousel-content">
                     <h3  class=" text-btn bg-li-secondary">CHOSSE WHAT </h3>
                     <h1>U' Wear</h1>
-                    <p>Looking good is good business,</p>
+                    <p>Home of creative printing</p>
                     <p> To dress well is good manner</p>
                     <div class="btn">Shop Now</div>
                 </div>
