--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
                     <li><a href="#">Shop</a></li>
                 </ul>
                 <div class="social">
-                    <a href="https://web.facebook.com/molawancy"><i class="fa-brands fa-square-facebook fa-2x"></i>  </a>
-                    <a href="https://www.instagram.com/molawancy/"><i class="fa-brands fa-instagram fa-2x"></i>  </a>
-                    <a href="#"><i class="fa-brands fa-twitter fa-2x"></i>  </a>
-                    <a href="#"><i class="fa-brands fa-youtube fa-2x"></i>  </a>
+                    <a target="_blank" href="https://web.facebook.com/molawancy"><i class="fa-brands fa-square-facebook fa-2x"></i>  </a>
+                    <a target="_blank" href="https://www.instagram.com/molawancy/"><i class="fa-brands fa-instagram fa-2x"></i>  </a>
+                    <a target="_blank" href="https://www.tiktok.com/@lawancyprint"><i class="fa-brands fa-tiktok fa-2x"></i> </a>
+                    <a target="_blank" href="#"><i class="fa-brands fa-twitter fa-2x"></i>  </a>
+                    <a target="_blank" href="#"><i class="fa-brands fa-youtube fa-2x"></i>  </a>
                 </div>
                 
             </div>
