--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Together, let's wear our values and make a difference, one t-shirt at a time
 
         <!-- features Section -->
         <div id="features"  class="container">
-            <h2>Features</h2>
+            <h2>Featured</h2>
             <hr>
             <div class="features">
                 
